hphp/test/zend/good/ext/sockets/tests/unixloop.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
	die('skip.. Not valid for Windows');
}
	if (!extension_loaded('sockets')) {
		die('skip sockets extension not available.');
	}
?>