hphp/test/zend/bad/ext/standard/tests/general_functions/bug44295.php.skipif
<?php
	if(substr(PHP_OS, 0, 3) == "WIN") die("skip Not for Windows");
	if (!extension_loaded("spl") || is_dir('/this/path/does/not/exist')) die("skip");
?>